--- a/LAwk5RyanLoberg.project
+++ b/LAwk5RyanLoberg.project
@@ -22,8 +22,32 @@
           "!type": "External",
           "file": [
             "forms",
-            "Form1",
-            "Form1.json"
+            "While",
+            "While.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "For",
+            "For.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "calc",
+            "calc.json"
+          ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "strings",
+            "strings.json"
           ]
         }
       ],
@@ -46,7 +70,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "Form1",
+      "firstform": "While",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
